tests/negative/regression/r16.orng
fn main ( ) -> Int { 
    & mut ? if & mut [ ] & ? match not while match 0 { } { } { } { }
} 